rabbitmq/clusters/dev/rabbitmq-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-management
  namespace: rabbitmq
  annotations:
    cert-manager.io/cluster-issuer: ambercare-app
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: dev.rabbitmq.ambercare.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rabbitmq
            port:
              number: 15672
  tls:
  - hosts:
    - dev.rabbitmq.ambercare.app
    secretName: rabbitmq-dev-tls
